tests/ui/fail/unexpected_curly_bracket.rs
use macro_files::create;

fn main() {
    create!({
        "directory" {}
    });
}
