tests/ui/fail/unexpected_curly_bracket.stderr
error: no rules expected the token `{`
 --> tests/ui/fail/unexpected_curly_bracket.rs:5:21
  |
5 |         "directory" {}
  |                     ^ no rules expected this token in macro call
